ImagePortfolio/main.css
/* styles.css */

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header {
    background-color: #333;
    color: white;
    padding: 20px 0;
    text-align: center;
}

header nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

header nav ul li {
    margin: 0 15px;
}

header nav ul li a {
    color: white;
    text-decoration: none;
}

section {
    padding: 50px;
    text-align: center;
}

#about, #contact {
    background-color: #f4f4f4;
}

.project {
    margin: 20px;
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 0.6s, transform 0.6s;
}

.projects-container {
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center; 
    gap: 20px;
}
.project-list{
    display: flex;
    flex-direction: row; 
    flex-wrap: wrap; 
    justify-content: center; 
    align-items: top; 
    gap: 30px; 
}

.project img {
    width: 400px;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

    margin-top: 50px;

    cursor: pointer;
}
@media (max-width: 460px) {
    .project img {
        width: 90%;
        max-width: none;
    }
}

.project p {
    font-weight: 700;
    font-size: 16px;
    color: #333;
    margin-top: 10px;
}

.project.visible {
    opacity: 1;
    transform: translateY(0);
}

.project h2, .project p {
    margin: 10px 0;
}

.project h2 {
    font-size: 24px;
    color: #222;
}

#projects {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px 0;
}

/* Лоадер */
.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
    position: absolute;
    top: 50%;
    left: 46%;
    transform: translate(-50%, -50%);
    z-index: 9999; /* Перед усім іншим контентом */
    display: block; /* Прихований за замовчуванням */
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

/* Modal Styles */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.9);
}

.modal-content {
    padding: 10px;
    max-height: 90vh; /* висота зображення не перевищуватиме 80% від висоти вікна перегляду */
    max-width: 90vw; /* ширина зображення не перевищуватиме 90% від ширини вікна перегляду */
    width: auto; /* ширина зображення буде автоматично регулюватися */
    height: auto; /* висота зображення буде автоматично регулюватися */
}

.modal-content-container {
    padding-top: 40px;
    
    display: flex;
    flex-direction: column;
    align-items: center; /* Центрує елементи по горизонталі */
    justify-content: center; /* Центрує елементи по вертикалі */
    max-height: 70vh; /* Максимальна висота зображення не перевищуватиме 70% від висоти вікна перегляду */
    max-width: 90vw; /* Максимальна ширина зображення не перевищуватиме 90% від ширини вікна перегляду */
    width: auto; /* Автоматична ширина */
    height: auto; /* Автоматична висота */
    object-fit: contain; /* Зображення буде масштабуватися, щоб вписатися в контейнер, зберігаючи свої пропорції */
    margin: auto; /* Центрує блок по горизонталі */
}

.close {
    position: absolute;
    top: 20px;
    right: 30px;
    color: white;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

#caption {
    margin: auto;
    display: block;
    text-align: center;
    color: white;
    font-size: 20px;
    padding: 10px 0;
}

